deps/v8/test/message/arrow-invalid-rest-2.out
*%(basename)s:7: SyntaxError: Unexpected token =
var f = (a, ...x = 10) => x;
                 ^
SyntaxError: Unexpected token =
